--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,16 @@ allprojects {
         jcenter()
     }
 }
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile(name:'live4danmaku-release', ext:'aar')
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
 
